Перенос навигации в Core

--- a/DvachBrowser3.Core/DvachBrowser3.Core.csproj
+++ b/DvachBrowser3.Core/DvachBrowser3.Core.csproj
@@ -237,6 +237,20 @@
     <Compile Include="Models\Posts\ThreadPreviewTree.cs" />
     <Compile Include="Models\Posts\ThreadTree.cs" />
     <Compile Include="Models\Posts\ThreadTreePartial.cs" />
+    <Compile Include="Navigation\BoardLinkNavigaionKey.cs" />
+    <Compile Include="Navigation\BoardLinkNavigationFactory.cs" />
+    <Compile Include="Navigation\BoardMediaNavigationKey.cs" />
+    <Compile Include="Navigation\BoardNavigationKey.cs" />
+    <Compile Include="Navigation\BoardPageNavigationKey.cs" />
+    <Compile Include="Navigation\INavigationKey.cs" />
+    <Compile Include="Navigation\INavigationKeyFactory.cs" />
+    <Compile Include="Navigation\INavigationKeyService.cs" />
+    <Compile Include="Navigation\MediaNavigationKey.cs" />
+    <Compile Include="Navigation\NavigationKeyService.cs" />
+    <Compile Include="Navigation\PostNavigationKey.cs" />
+    <Compile Include="Navigation\RootNavigationKey.cs" />
+    <Compile Include="Navigation\ThreadNavigationKey.cs" />
+    <Compile Include="Navigation\YoutubeNavigationKey.cs" />
     <Compile Include="Notifications\BadgeContent.cs" />
     <Compile Include="Notifications\Common.cs" />
     <Compile Include="Notifications\ContentInterfaces.cs" />
