Модель коллекций постов

--- a/DvachBrowser3.Core/DvachBrowser3.Core.csproj
+++ b/DvachBrowser3.Core/DvachBrowser3.Core.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Models\Posting\PostingMediaFiles.cs" />
     <Compile Include="Models\Posts\BoardPageTreeExtension.cs" />
     <Compile Include="Models\Posts\BoardPageTree.cs" />
+    <Compile Include="Models\Posts\IPostTreeListSource.cs" />
     <Compile Include="Models\Posts\KnownMediaType.cs" />
     <Compile Include="Models\Posts\PostColor.cs" />
     <Compile Include="Models\Posts\PostFlags.cs" />
